# ProgramVer

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.txt  LICENSE.txt  MANIFEST.in  PLANNING.md  ProgramVer.py  README.md  SECURITY.md  __init__.py  __main__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: codeql-analysis.yml  push-to-pypi.yml  tests.yml
docs/: CUSTOMIZATION.md  README.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
tests/: README.md  __init__.py  test_main.py
